--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -1,50 +1,89 @@
-<div class="wrapper">
-    <div class="top_navbar">
-        <div class="hamburger">
-            <div class="one"></div>
-            <div class="two"></div>
-            <div class="three"></div>
-        </div>
-        <div class="top_menu">
-            <div class="logo">
-                logo
-            </div>
-            <ul>
-                <li><a href="#">
-                    <i class="fas fa-search"></i>
-                </a></li>
-                <li><a href="#">
-                    <i class="fas fa-bell"></i>
-                </a></li>
-                <li><a href="#">
-                    <i class="fas fa-user"></i>
-                </a></li>
-            </ul>
-        </div>
+
+<link rel="stylesheet" href="/css/navbar.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <script src="/js/navbar.js"></script>
+
+<div class="top_navbar">
+    <div class="hamburger">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
     </div>
-    
-    <div class="sidebar">
+    <div class="top_menu">
+        <div class="logo">
+            TaskSquire
+        </div>
         <ul>
-            <li><a href="#">
-                <span class="icon"><i class="fas fa-book"></i></span>
-                <span class="title">Books</span>
+            <li><a href="/users/logout">
+                <i class="fas fa-power-off"></i>
             </a></li>
-            <li><a href="#">
-                <span class="icon"><i class="fas fa-file-video"></i></span>
-                <span class="title">Movies</span>
+            <li><a href="/students/student-notifications" id="notification-icon">
+                <i class="fas fa-bell"></i>
+                <span id="new-notifications-indicator" style="display: none;">●</span>
             </a></li>
-            <li><a href="#">
-                <span class="icon"><i class="fas fa-volleyball-ball"></i></span>
-                <span class="title">Sports</span>
-            </a></li>
-            <li><a href="#" class="active">
-                <span class="icon"><i class="fas fa-blog"></i></span>
-                <span class="title">Blogs</span>
-            </a></li>
-            <li><a href="#">
-                <span class="icon"><i class="fas fa-leaf"></i></span>
-                <span class="title">Nature</span>
+            <li><a href="/students/settings">
+                <i class="fas fa-user"></i>
             </a></li>
         </ul>
     </div>
 </div>
+
+<div class="sidebar">
+    <ul>
+        <li><a href="/students/student-dashboard" class="sidebar-link">
+            <span class="icon"><i class="fas fa-tachometer-alt"></i></span>
+            <span class="title">Dashboard</span>
+        </a></li>
+        <li><a href="/students/student-classes" class="sidebar-link">
+            <span class="icon"><i class="fas fa-book"></i></span>
+            <span class="title">Classes</span>
+        </a></li>
+        <li><a href="/students/student-incomplete-tasks" class="sidebar-link">
+            <span class="icon"><i class="fas fa-tasks"></i></span>
+            <span class="title">Tasks <span id="new-tasks-indicator" style="color: red; display: none;">[New]</span></span>
+        </a></li>
+        <li><a href="/students/student-attendance-report" class="sidebar-link">
+            <span class="icon"><i class="fas fa-chart-bar"></i></span>
+            <span class="title">Attendance</span>
+        </a></li>
+    </ul>
+</div>
+
+<script>
+    async function checkNewNotifications() {
+        try {
+            const response = await fetch('/students/student-new-notifications');
+            const data = await response.json();
+            const newNotificationsIndicator = document.getElementById('new-notifications-indicator');
+
+            if (data.notifications.length > 0) {
+                newNotificationsIndicator.style.display = 'inline';
+            } else {
+                newNotificationsIndicator.style.display = 'none';
+            }
+        } catch (error) {
+            console.error('Error checking new notifications:', error);
+        }
+    }
+
+    async function checkNewTasks() {
+        try {
+            const response = await fetch('/students/student-new-tasks');
+            const data = await response.json();
+            const newTasksIndicator = document.getElementById('new-tasks-indicator');
+
+            if (data.tasks.length > 0) {
+                newTasksIndicator.style.display = 'inline';
+            } else {
+                newTasksIndicator.style.display = 'none';
+            }
+        } catch (error) {
+            console.error('Error checking new tasks:', error);
+        }
+    }
+
+    window.onload = function() {
+        checkNewNotifications();
+        checkNewTasks();
+    }
+</script>
