--- a/views/student-classes.ejs
+++ b/views/student-classes.ejs
@@ -6,12 +6,17 @@
     <title>Student Classes</title>
 </head>
 <body>
-    <h1>Welcome, <%= username %>!</h1>
+    <div class="wrapper">
+        <%- include('_navbar', { userRole: userRole }) %>
+        <div class="main_container">
+    
     <h2>Your Classes:</h2>
     <ul>
         <% classes.forEach(function(cl) { %>
             <li><a href="/students/student-class-details/<%= cl._id %>"><%= cl.name %> - Taught by <%= cl.teacher.username %></a></li>
         <% }); %>
     </ul>
+    </div>
+    </div>
 </body>
 </html>
