--- a/views/student-incomplete-tasks.ejs
+++ b/views/student-incomplete-tasks.ejs
@@ -17,6 +17,9 @@
     </style>
 </head>
 <body>
+    <div class="wrapper">
+        <%- include('_navbar', { userRole: userRole }) %>
+        <div class="main_container">
     <h1>Your Incomplete Tasks</h1>
     <form action="/students/mark-tasks-complete" method="post">
         <input type="hidden" name="returnUrl" value="<%= req.originalUrl %>">
@@ -61,5 +64,7 @@
         <button type="submit">Submit Changes</button>
     </form>
     <button onclick="window.location.href='/students/student-dashboard'">Back to Dashboard</button>
+    </div>
+</div>
 </body>
 </html>
