--- a/views/_navbar2.ejs
+++ b/views/_navbar2.ejs
@@ -27,7 +27,7 @@
 
 <div class="sidebar">
     <ul>
-        <li><a href="/teachers/teacher-dashboard" class="sidebar-link">
+        <li><a href="/teachers/dashboard" class="sidebar-link">
             <span class="icon"><i class="fas fa-tachometer-alt"></i></span>
             <span class="title">Dashboard</span>
         </a></li>
