--- a/views/edit-class.ejs
+++ b/views/edit-class.ejs
@@ -17,6 +17,9 @@
     </style>
 </head>
 <body>
+    <div class="wrapper">
+        <%- include('_navbar2', { userRole: userRole }) %>
+        <div class="main_container">
     <h1>Edit Class: <%= classInfo.name %></h1>
     <form id="classForm" method="post" action="/teachers/edit-class/<%= classInfo._id %>">
         <label for="name">Class Name:</label>
@@ -53,5 +56,7 @@
             button.parentNode.remove();
         }
     </script>
+    </div>
+    </div>
 </body>
 </html>
