--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 <body>
-    <h1>Register</h1>
-    <form action="/users/register" method="post">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <select name="role">
-            <option value="student">Student</option>
-            <option value="teacher">Teacher</option>
-        </select>
-        <button type="submit">Register</button>
-    </form>
+    <div class="wrapper">
+        <div class="main_container">
+            <h1>Register</h1>
+            <form action="/users/register" method="post">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <select name="role">
+                    <option value="student">Student</option>
+                    <option value="teacher">Teacher</option>
+                </select>
+                <button type="submit">Register</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
