--- a/views/student-class-details.ejs
+++ b/views/student-class-details.ejs
@@ -36,6 +36,9 @@
     </style>
 </head>
 <body>
+    <div class="wrapper">
+        <%- include('_navbar', { userRole: userRole }) %>
+        <div class="main_container">
     <h1>Class: <%= className %></h1>
 
     <div class="task-list">
@@ -90,5 +93,7 @@
     <br>
     <br>
     <button onclick="window.location.href='/students/student-dashboard'">Back to Dashboard</button>
+    </div>
+    </div>
 </body>
 </html>
