--- a/views/student-settings.ejs
+++ b/views/student-settings.ejs
@@ -38,6 +38,9 @@
     </style>
 </head>
 <body>
+    <div class="wrapper">
+        <%- include('_navbar', { userRole: userRole }) %>
+        <div class="main_container">
     <h1>Settings</h1>
 
     <form action="/students/settings" method="post">
@@ -70,6 +73,7 @@
             <%= message %>
         </div>
     <% } %>
-
+    </div>
+    </div>
 </body>
 </html>
